Persisting Data Using Core Data

--- a/Todoey-New/Views/Base.lproj/Main.storyboard
+++ b/Todoey-New/Views/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Todoey-New-->
+        <!--Items-->
         <scene sceneID="KsF-7W-kiN">
             <objects>
                 <tableViewController id="qEz-cX-5gy" customClass="TodoListVC" customModule="Todoey_New" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,9 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="SSx-7p-r02">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="qEz-cX-5gy" id="ND8-2U-6Ks"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoItemCell" id="La9-zL-fZR">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="La9-zL-fZR" id="PcE-dk-uDo">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -32,7 +40,7 @@
                             <outlet property="delegate" destination="qEz-cX-5gy" id="KWe-XS-G2F"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey-New" id="C9E-u2-9fS">
+                    <navigationItem key="navigationItem" title="Items" id="C9E-u2-9fS">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="jc2-XC-QJu">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -43,7 +51,46 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iUC-sT-CJV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="977" y="86"/>
+            <point key="canvasLocation" x="1615" y="86"/>
+        </scene>
+        <!--Todoey-New-->
+        <scene sceneID="nba-hE-QT9">
+            <objects>
+                <tableViewController id="h9R-Be-r2Y" customClass="CategoryVC" customModule="Todoey_New" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pZg-Eg-mmd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="F8Y-bI-8uk">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="F8Y-bI-8uk" id="xsZ-tb-C2K">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="h9R-Be-r2Y" id="a28-mG-I69"/>
+                            <outlet property="delegate" destination="h9R-Be-r2Y" id="3oG-i8-Xan"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todoey-New" id="qxg-3Z-pFX">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fi9-95-WPY">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="h9R-Be-r2Y" id="mrK-Df-i9S"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="qEz-cX-5gy" kind="show" identifier="goToItems" id="ady-Xq-Qdz"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QLl-8J-qXH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="914" y="86"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KAJ-9H-ucn">
@@ -60,7 +107,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="qEz-cX-5gy" kind="relationship" relationship="rootViewController" id="ovB-E3-mAL"/>
+                        <segue destination="h9R-Be-r2Y" kind="relationship" relationship="rootViewController" id="DNU-Jo-p3m"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1ab-1B-gLz" userLabel="First Responder" sceneMemberID="firstResponder"/>
